# EDUOS

./: .env.example  .gitignore  Cargo.toml  Dockerfile  EduOS_Complete_QA_Report.md  README.md  STARTUP.md  credentials.md  docker-compose.yml  package.json  start-backend.ps1
backend/: Cargo.toml
backend/src/: audit.rs  config.rs  db.rs  error.rs  main.rs  response.rs  state.rs
backend/src/events/: bus.rs  mod.rs  subscriber.rs  types.rs
backend/src/middleware/: auth.rs  rbac.rs
backend/src/modules/: mod.rs
backend/src/modules/academics/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/auth/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/examination/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/finance/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/health/: mod.rs
backend/src/modules/hostel/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/medical/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/placement/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/student/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/transport/: handlers.rs  mod.rs  models.rs  service.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/hooks/: usePermissions.ts
frontend/src/pages/: Accounts.tsx  Attendance.tsx  AuditLogs.tsx  Courses.tsx  Dashboard.tsx  Exams.tsx  Faculty.tsx  Fees.tsx  HallTickets.tsx  Hostel.tsx  LeaveManagement.tsx  Library.tsx  Login.tsx  Medical.tsx  Notifications.tsx  Placeholder.tsx  Placement.tsx  Quizzes.tsx  Reports.tsx  Results.tsx  Scholarships.tsx  Students.tsx  Timetable.tsx  Transport.tsx
frontend/src/utils/: pdfGenerator.ts
migrations/: 002_core_schema.sql  003_student_module.sql  004_academics_module.sql  005_examination_module.sql  006_finance_module.sql  007_indexes.sql  008_library_module.sql  009_hostel_module.sql  010_transport_module.sql  011_placement_module.sql  012_medical_module.sql  013_seed_finance_data.sql  014_marks_status.sql  015_users_branch_id.sql  016_noop.sql  017_academics_module.sql  018_examinations_module.sql  019_finance_module.sql  020_library_module.sql  021_hostel_module.sql  022_transport_module.sql  023_placement_module.sql  024_marks_indexes.sql  025_quizzes_notifications.sql  026_performance_optimization_indices.sql  027_faculty_leave_requests.sql  028_fix_rbac_permissions.sql
