[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version     = "0.1.0"
authors     = ["EduOS Team"]
edition     = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1",    features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum         = { version = "0.7",  features = ["multipart", "ws"] }
tower        = { version = "0.4",  features = ["full"] }
tower-http   = { version = "0.5",  features = ["cors", "trace", "compression-gzip", "request-id", "timeout"] }

# Database
sqlx         = { version = "0.7",  features = ["postgres", "uuid", "chrono", "json", "runtime-tokio-rustls", "bigdecimal"] }
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }
redis        = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# Auth & crypto
jsonwebtoken = "9"
argon2       = "0.5"
rand         = "0.8"
base64       = "0.21"

# UUIDs & time
uuid         = { version = "1",    features = ["v4", "serde"] }
chrono       = { version = "0.4",  features = ["serde"] }
# bigdecimal is provided by sqlx via sqlx::types::BigDecimal (bundled 0.3)

# Validation
validator    = { version = "0.18", features = ["derive"] }

# Error handling
anyhow       = "1"
thiserror    = "1"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config   = "0.14"
dotenvy  = "0.15"
