[package]
name    = "eduos-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "eduos-backend"
path = "src/main.rs"

[dependencies]
tokio.workspace        = true
axum = { workspace = true, features = ["macros"] }
tower.workspace        = true
tower-http.workspace   = true
sqlx.workspace         = true
deadpool-redis.workspace = true
redis.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
jsonwebtoken.workspace = true
argon2.workspace       = true
rand.workspace         = true
base64.workspace       = true
sha2.workspace         = true
hex.workspace          = true
uuid.workspace         = true
chrono.workspace       = true
# bigdecimal comes transitively via sqlx::types::BigDecimal
validator.workspace    = true
anyhow.workspace       = true
thiserror.workspace    = true
tracing.workspace      = true
tracing-subscriber.workspace = true
config.workspace       = true
dotenvy.workspace      = true
